doc: instrunctions
