# app/settings.py
@@ -145,7 +145,8 @@ AUTHENTICATION_BACKENDS = ("allauth.account.auth_backends.AuthenticationBackend"
 
 SITE_ID = 1
 ACCOUNT_EMAIL_VERIFICATION = "none"
-LOGIN_REDIRECT_URL = "api:usersprofiles-list"
+LOGIN_REDIRECT_URL = "/swagger/"
+LOGOUT_REDIRECT_URL = '/accounts/github/login'
 ACCOUNT_LOGOUT_ON_GET = False
 ACCOUNT_LOGOUT_REDIRECT_URL = "/accounts/github/login/"
 
